# AutoDocLM

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: cli.py  config.py  pipeline.py
src/analysis/: centrality_scorer.py  cross_file_calls.py  dependency_extractor.py  entrypoint_detector.py  folder_graph_extractor.py  import_graph_builder.py  package_roots.py
src/chunking/: fallback_parser.py  isolation.py  js_ts_parser.py  models.py  orchestrator.py  python_parser.py
src/diagrams/: component_graph.py  generator.py  import_graph.py
src/docs/: __init__.py  diagram_generator.py  mkdocs_builder.py
src/indexing/: __init__.py  embed_chunks.py  vector_store_chroma.py
src/ingest/: classify_files.py  clone_repo.py  file_filter.py
src/llm/: caching.py  chunk_inference.py  file_inference.py  folder_inference.py  inference_client.py  markdown_writer.py  prompts.py  rag_retriever.py  repo_inference.py
src/site_build/: builder.py  config_generator.py  nav_builder.py
