[project]
name = "autodoclm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "networkx>=3.6.1",
    "pathspec>=1.0.4",
    "scipy>=1.17.1",
    "tree-sitter>=0.23",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "typer>=0.9.0",
]
