[project]
name = "autodoclm"
version = "0.1.0"
description = "An AI-powered repository documentation generator that uses hierarchical inference and static analysis to build architecture-aware MkDocs sites. It transforms source code into structured documentation and Mermaid diagrams while preserving complex module interactions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "dotenv>=0.9.9",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-panzoom-plugin>=0.5.2",
    "networkx>=3.6.1",
    "ollama>=0.6.1",
    "openai>=2.32.0",
    "pathspec>=1.0.4",
    "pyyaml>=6.0.3",
    "scipy>=1.13.0",
    "tree-sitter>=0.23",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "typer>=0.9.0",
]
